scripts/samples/istio/emco-virtualservices.yaml
# SPDX-License-Identifier: Apache-2.0
# Copyright (c) 2020 Intel Corporation
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-emco-orchestrator
  namespace: emco
spec:
  hosts:
  - "*"
  gateways:
  - emco-gateway
  http:
  - match:
    - uri:
        prefix: /v2/controllers
    - uri:
        exact: /v2/projects
    - uri:
        regex: /v2/projects/[^\/]*
    - uri:
        regex: /v2/projects/.+/composite-apps
    - uri:
        regex: /v2/projects/.+/composite-apps/[^\/]*
    - uri:
        regex: /v2/projects/.+/composite-apps/[^\/]*\/[^\/]*
    - uri:
        regex: /v2/projects/.+/composite-apps/[^\/]*\/[^\/]*/apps
    - uri:
        regex: /v2/projects/.+/composite-apps/[^\/]*\/[^\/]*/apps/[^\/]*
    - uri:
        regex: /v2/projects/.+/composite-apps/[^\/]*\/[^\/]*/composite-profiles
    - uri:
        regex: /v2/projects/.+/composite-apps/[^\/]*\/[^\/]*/composite-profiles/[^\/]*
    - uri:
        regex: /v2/projects/.+/composite-apps/[^\/]*\/[^\/]*/composite-profiles/[^\/]*/profiles
    - uri:
        regex: /v2/projects/.+/composite-apps/[^\/]*\/[^\/]*/composite-profiles/[^\/]*/profiles/[^\/]*
    - uri:
        regex: /v2/projects/.+/composite-apps/[^\/]*\/[^\/]*/deployment-intent-groups
    - uri:
        regex: /v2/projects/.+/composite-apps/[^\/]*\/[^\/]*/deployment-intent-groups/[^\/]*
    - uri:
        regex: /v2/projects/.+/composite-apps/[^\/]*\/[^\/]*/deployment-intent-groups/[^\/]*/approve
    - uri:
        regex: /v2/projects/.+/composite-apps/[^\/]*\/[^\/]*/deployment-intent-groups/[^\/]*/instantiate
    - uri:
        regex: /v2/projects/.+/composite-apps/[^\/]*\/[^\/]*/deployment-intent-groups/[^\/]*/terminate
    - uri:
        regex: /v2/projects/.+/composite-apps/[^\/]*\/[^\/]*/deployment-intent-groups/[^\/]*/update
    - uri:
        regex: /v2/projects/.+/composite-apps/[^\/]*\/[^\/]*/deployment-intent-groups/[^\/]*/rollback
    - uri:
        regex: /v2/projects/.+/composite-apps/[^\/]*\/[^\/]*/deployment-intent-groups/[^\/]*/status
    - uri:
        regex: /v2/projects/.+/composite-apps/[^\/]*\/[^\/]*/deployment-intent-groups/[^\/]*/stop
    - uri:
        regex: /v2/projects/.+/composite-apps/[^\/]*\/[^\/]*/deployment-intent-groups/[^\/]*/intents
    - uri:
        regex: /v2/projects/.+/composite-apps/[^\/]*\/[^\/]*/deployment-intent-groups/[^\/]*/intents/[^\/]*
    - uri:
        regex: /v2/projects/.+/composite-apps/[^\/]*\/[^\/]*/deployment-intent-groups/[^\/]*/generic-placement-intents
    - uri:
        regex: /v2/projects/.+/composite-apps/[^\/]*\/[^\/]*/deployment-intent-groups/[^\/]*/generic-placement-intents/[^\/]*
    - uri:
        regex: /v2/projects/.+/composite-apps/[^\/]*\/[^\/]*/deployment-intent-groups/[^\/]*/generic-placement-intents/[^\/]*/app-intents
    - uri:
        regex: /v2/projects/.+/composite-apps/[^\/]*\/[^\/]*/deployment-intent-groups/[^\/]*/generic-placement-intents/[^\/]*/app-intents/[^\/]*
          
    route:
    - destination:
        port:
          number: 9015
        host: orchestrator
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-emco-clm
  namespace: emco
spec:
  hosts:
  - "*"
  gateways:
  - emco-gateway
  http:
  - match:
    - uri:
        exact: /v2/cluster-providers
    - uri:
        regex: /v2/cluster-providers/[^\/]*
    - uri:
        regex: /v2/cluster-providers/.+/clusters
    - uri:
        regex: /v2/cluster-providers/.+/clusters/[^\/]*
    - uri:
        regex: /v2/cluster-providers/.+/clusters/[^\/]*/labels
    - uri:
        regex: /v2/cluster-providers/.+/clusters/[^\/]*/labels/[^\/]*
    - uri:
        regex: /v2/cluster-providers/.+/clusters/[^\/]*/kv-pairs
    - uri:
        regex: /v2/cluster-providers/.+/clusters/[^\/]*/kv-pairs/[^\/]*
    route:
    - destination:
        port:
          number: 9061
        host: clm
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-emco-ncm
  namespace: emco
spec:
  hosts:
  - "*"
  gateways:
  - emco-gateway
  http:
  - match:
    - uri:
        regex: /v2/cluster-providers/.+/clusters/.+/networks
    - uri:
        regex: /v2/cluster-providers/.+/clusters/.+/networks/[^\/]*
    - uri:
        regex: /v2/cluster-providers/.+/clusters/.+/provider-networks
    - uri:
        regex: /v2/cluster-providers/.+/clusters/.+/provider-networks/[^\/]*
    - uri:
        regex: /v2/cluster-providers/.+/clusters/.+/apply
    - uri:
        regex: /v2/cluster-providers/.+/clusters/.+/terminate
    - uri:
        regex: /v2/cluster-providers/.+/clusters/.+/status
    - uri:
        regex: /v2/cluster-providers/.+/clusters/.+/stop
    route:
    - destination:
        port:
          number: 9081
        host: ncm
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-emco-ovnaction
  namespace: emco
spec:
  hosts:
  - "*"
  gateways:
  - emco-gateway
  http:
  - match:
    - uri:
        regex: /v2/projects/.+/composite-apps/.+/.+/deployment-intent-groups/.+/network-controller-intent
    - uri:
        regex: /v2/projects/.+/composite-apps/.+/.+/deployment-intent-groups/.+/network-controller-intent/.*
    route:
    - destination:
        port:
          number: 9051
        host: ovnaction
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-emco-dcm
  namespace: emco
spec:
  hosts:
  - "*"
  gateways:
  - emco-gateway
  http:
  - match:
    - uri:
        regex: /v2/projects/.+/logical-clouds
    - uri:
        regex: /v2/projects/.+/logical-clouds/.*
    route:
    - destination:
        port:
          number: 9077
        host: dcm
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-emco-gac
  namespace: emco
spec:
  hosts:
  - "*"
  gateways:
  - emco-gateway
  http:
  - match:
    - uri:
        regex: /v2/projects/.+/composite-apps/.+/.+/deployment-intent-groups/.+/generic-k8s-intents
    - uri:
        regex: /v2/projects/.+/composite-apps/.+/.+/deployment-intent-groups/.+/generic-k8s-intents/.*
    route:
    - destination:
        port:
          number: 9020
        host: gac
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-emco-dtc
  namespace: emco
spec:
  hosts:
  - "*"
  gateways:
  - emco-gateway
  http:
  - match:
    - uri:
        prefix: /v2/dtc-controllers
    - uri:
        regex: /v2/projects/.+/composite-apps/.+/.+/deployment-intent-groups/.+/traffic-group-intents
    - uri:
        regex: /v2/projects/.+/composite-apps/.+/.+/deployment-intent-groups/.+/traffic-group-intents/.*
    route:
    - destination:
        port:
          number: 9018
        host: dtc
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-emco-sfc
  namespace: emco
spec:
  hosts:
  - "*"
  gateways:
  - emco-gateway
  http:
  - match:
    - uri:
        regex: /v2/projects/.+/composite-apps/.+/.+/deployment-intent-groups/.+/network-chains
    - uri:
        regex: /v2/projects/.+/composite-apps/.+/.+/deployment-intent-groups/.+/network-chains/.*
    route:
    - destination:
        port:
          number: 9055
        host: sfc
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-emco-sfc-client
  namespace: emco
spec:
  hosts:
  - "*"
  gateways:
  - emco-gateway
  http:
  - match:
    - uri:
        regex: /v2/projects/.+/composite-apps/.+/.+/deployment-intent-groups/.+/sfc-clients
    - uri:
        regex: /v2/projects/.+/composite-apps/.+/.+/deployment-intent-groups/.+/sfc-clients/.*
    route:
    - destination:
        port:
          number: 9057
        host: sfcclient
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-emco-hpaplc
  namespace: emco
spec:
  hosts:
  - "*"
  gateways:
  - emco-gateway
  http:
  - match:
    - uri:
        regex: /v2/projects/.+/composite-apps/.+/.+/deployment-intent-groups/.+/hpa-intents
    - uri:
        regex: /v2/projects/.+/composite-apps/.+/.+/deployment-intent-groups/.+/hpa-intents/.*
    route:
    - destination:
        port:
          number: 9091
        host: hpaplc
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-emco-workflowmgr
  namespace: emco
spec:
  hosts:
  - "*"
  gateways:
  - emco-gateway
  http:
  - match:
    - uri:
        regex: /v2/projects/.+/composite-apps/.+/.+/deployment-intent-groups/.+/temporal-workflow-intents
    - uri:
        regex: /v2/projects/.+/composite-apps/.+/.+/deployment-intent-groups/.+/temporal-workflow-intents/.*
    route:
    - destination:
        port:
          number: 9095
        host: workflowmgr
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-emco-callback
  namespace: emco
spec:
  hosts:
  - "*"
  gateways:
  - emco-gateway
  http:
  - match:
    - uri:
        prefix: /mesh/auth_callback        
    route:
    - destination:
        host: orchestrator
